fix: nav menu account link whitespace

--- a/frontend_bundler/client/app/styles/layout/woo/my-account.scss
+++ b/frontend_bundler/client/app/styles/layout/woo/my-account.scss
@@ -8,6 +8,8 @@
 
         ul {
             li {
+                white-space: nowrap;
+                
                 &:not(:last-child) {
                     margin-bottom: 20px;
 
